src/z80asm/z80asm2/t/30-directive/expected/undefine_21.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/undefine_21.asm
Assembling t/30-directive/input/undefine_21.asm...
t/30-directive/input/undefine_21.asm:1:9: error: Expected macro name after UNDEF
    undefine ; no name
            ^
t/30-directive/input/undefine_21.asm:2:16: error: Unexpected token after UNDEF: world
    hello undefine world ; extra tokens
                   ^
# file: t/30-directive/input/undefine_21.asm
EndOfLine	"\n"	3:1	
